exports[`HierarchicalMenu applies translations 1`] = `
<div
  className="ais-HierarchicalMenu__root">
  <div
    className="ais-HierarchicalMenu__items">
    <div
      className="ais-HierarchicalMenu__item ais-HierarchicalMenu__itemParent">
      <a
        className="ais-HierarchicalMenu__itemLink"
        href="#"
        onClick={[Function]}>
        <span
          className="ais-HierarchicalMenu__itemLabel">
          white
        </span>
         
        <span
          className="ais-HierarchicalMenu__itemCount">
          10
        </span>
      </a>
      <div
        className="ais-HierarchicalMenu__itemChildren">
        <div
          className="ais-HierarchicalMenu__item">
          <a
            className="ais-HierarchicalMenu__itemLink"
            href="#"
            onClick={[Function]}>
            <span
              className="ais-HierarchicalMenu__itemLabel">
              white1
            </span>
             
            <span
              className="ais-HierarchicalMenu__itemCount">
              3
            </span>
          </a>
        </div>
        <div
          className="ais-HierarchicalMenu__item">
          <a
            className="ais-HierarchicalMenu__itemLink"
            href="#"
            onClick={[Function]}>
            <span
              className="ais-HierarchicalMenu__itemLabel">
              white2
            </span>
             
            <span
              className="ais-HierarchicalMenu__itemCount">
              4
            </span>
          </a>
        </div>
      </div>
    </div>
    <div
      className="ais-HierarchicalMenu__item">
      <a
        className="ais-HierarchicalMenu__itemLink"
        href="#"
        onClick={[Function]}>
        <span
          className="ais-HierarchicalMenu__itemLabel">
          black
        </span>
         
        <span
          className="ais-HierarchicalMenu__itemCount">
          20
        </span>
      </a>
    </div>
    <div
      className="ais-HierarchicalMenu__item">
      <a
        className="ais-HierarchicalMenu__itemLink"
        href="#"
        onClick={[Function]}>
        <span
          className="ais-HierarchicalMenu__itemLabel">
          blue
        </span>
         
        <span
          className="ais-HierarchicalMenu__itemCount">
          30
        </span>
      </a>
    </div>
  </div>
</div>
`;

exports[`HierarchicalMenu default hierarchical menu 1`] = `
<div
  className="ais-HierarchicalMenu__root">
  <div
    className="ais-HierarchicalMenu__items">
    <div
      className="ais-HierarchicalMenu__item ais-HierarchicalMenu__itemParent">
      <a
        className="ais-HierarchicalMenu__itemLink"
        href="#"
        onClick={[Function]}>
        <span
          className="ais-HierarchicalMenu__itemLabel">
          white
        </span>
         
        <span
          className="ais-HierarchicalMenu__itemCount">
          10
        </span>
      </a>
      <div
        className="ais-HierarchicalMenu__itemChildren">
        <div
          className="ais-HierarchicalMenu__item">
          <a
            className="ais-HierarchicalMenu__itemLink"
            href="#"
            onClick={[Function]}>
            <span
              className="ais-HierarchicalMenu__itemLabel">
              white1
            </span>
             
            <span
              className="ais-HierarchicalMenu__itemCount">
              3
            </span>
          </a>
        </div>
        <div
          className="ais-HierarchicalMenu__item">
          <a
            className="ais-HierarchicalMenu__itemLink"
            href="#"
            onClick={[Function]}>
            <span
              className="ais-HierarchicalMenu__itemLabel">
              white2
            </span>
             
            <span
              className="ais-HierarchicalMenu__itemCount">
              4
            </span>
          </a>
        </div>
      </div>
    </div>
    <div
      className="ais-HierarchicalMenu__item">
      <a
        className="ais-HierarchicalMenu__itemLink"
        href="#"
        onClick={[Function]}>
        <span
          className="ais-HierarchicalMenu__itemLabel">
          black
        </span>
         
        <span
          className="ais-HierarchicalMenu__itemCount">
          20
        </span>
      </a>
    </div>
  </div>
  <button
    className="ais-HierarchicalMenu__showMore"
    disabled={false}
    onClick={[Function]}>
    Show more
  </button>
</div>
`;
